--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,15 +31,8 @@
         android:name="com.example.project_myfit.ui.main.listfragment.ListFragment"
         tools:layout="@layout/fragment_list">
         <action
-            android:id="@+id/action_listFragment_to_inputFragment"
-            app:destination="@id/inputFragment"
-            app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/fragment_fade_exit"
-            app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/fragment_fade_exit" />
-        <action
-            android:id="@+id/action_listFragment_to_outputFragment"
-            app:destination="@id/outputFragment"
+            android:id="@+id/action_listFragment_to_inputOutputFragment"
+            app:destination="@id/inputOutputFragment"
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit"
             app:popEnterAnim="@anim/fragment_fade_enter"
@@ -55,25 +48,11 @@
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/inputFragment"
-        android:name="com.example.project_myfit.ui.main.listfragment.inputfragment.InputFragment"
-        tools:layout="@layout/fragment_input">
+        android:id="@+id/inputOutputFragment"
+        android:name="com.example.project_myfit.ui.main.listfragment.inputoutputfragment.InputOutputFragment"
+        tools:layout="@layout/fragment_input_output">
         <action
-            android:id="@+id/action_inputFragment_to_listFragment"
-            app:destination="@id/listFragment"
-            app:enterAnim="@anim/fragment_fade_enter"
-            app:exitAnim="@anim/fragment_fade_exit"
-            app:popEnterAnim="@anim/fragment_fade_enter"
-            app:popExitAnim="@anim/fragment_fade_exit"
-            app:popUpTo="@id/listFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/outputFragment"
-        android:name="com.example.project_myfit.ui.main.listfragment.outputfragment.OutputFragment"
-        tools:layout="@layout/fragment_input">
-        <action
-            android:id="@+id/action_outputFragment_to_listFragment"
+            android:id="@+id/action_inputOutputFragment_to_listFragment"
             app:destination="@id/listFragment"
             app:enterAnim="@anim/fragment_fade_enter"
             app:exitAnim="@anim/fragment_fade_exit"
