--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="dark_gray">#FF222222</color>
     <color name="recycler_background">#FFF0F0F0</color>
     <color name="recycler_background_night">#FF282828</color>
+    <color name="go_button_color">#FFF8F8F8 </color>
+    <color name="go_button_color_night">#FF282828</color>
 </resources>
